--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kamada-maki/BlueberryBook#readme",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^14.14.10",
     "typescript": "^4.6.2"
   }
